<resources>
    <string name="app_name">RopaAPP</string>
    <string name="hintDeLogin">Usuario</string>
    <string name="loginContraseña">Contraseña</string>
    <string name="BTNentrarLogin">Entrar</string>
    <string name="BTNRegistro">Registrate</string>
    <string name="BTNPagar">Pagar</string>
    <string name="BTNAñadirfoto">+</string>
    <string name="BTNconsutarconjunto">Q</string>
    <string name="FlechaDerecha"><![CDATA[>]]></string>
    <string name="Mensajededescripcion">TODO</string>
    <string name="FlechaIzquierda"><![CDATA[<]]></string>
    <string name="BTNseleccionar">Seleccionar</string>
    <string name="NombreConjunto">Conjunto1</string>
    <string name="NumCuenta">Inserta el numero de cuenta</string>
    <string name="NumTarjeta">Numero de tarjeta</string>
    <string name="FechaCredito">Fecha de caducidad</string>
    <string name="CodSeguridadtarjeta">Codigo de seguridad</string>
    <string name="NumTarjetaHint">4500...</string>
    <string name="FechaCadHint">03/26</string>
    <string name="CodsegHint">586</string>
    <string name="faltanDatos">Introduzca usuario y contraseña</string>
    <string name="datosIncorrectos">Usuario o contraseña Incorrectos</string>
    <string name="usuarioExiste">El usuario ya existe</string>
    <!--En esta pagina hemos escrito el texto que estara en los TextView  y el de los botones del Linear Layout-->
    <string name="app_titulo">TÉRMINOS Y CONDICIONES DE USO APP VIRTUAL STYLE</string>
    <string name="app_texto">\n1. Estos Terminos y Condiciones de Uso regulan las reglas a que se sujeta la utilización de la APP Virtual Style, que puede descargarse desde el dominio Play Store. La descarga o utilización de la APP atribuye la condición de Usuario a quien lo haga e implica la aceptación de todas las condiciones incluidas en este documento y en la Política de Privacidad y el Aviso Legal de dicha página Web. El Usuario debería leer estas condiciones cada vez que utilice la APP, ya que podrían ser modificadas en lo sucesivo. \n
\n
2. Únicamente los Usuarios expresamente autorizados por EDOtek podrán acceder a la descarga y uso de la APP. Los Usuarios que no dispongan de autorización, no podrán acceder a dicho contenido.\n
\n
3. Cargos: eres responsable del pago de todos los costes o gastos en los que incurras como resultado de descargar y usar la Aplicación de EDOtek, incluido cualquier cargo de red de operador o itinerancia. Consulta con tu proveedor de servicios los detalles al respecto.\n
\n
4. Estadísticas anónimas: EDOtek se reserva el derecho a realizar un seguimiento de tu actividad en la Aplicación de y a informar de ello a nuestros proveedores de servicios estadísticos de terceros. Todo ello de forma anónima.\n
\n
5. Protección de tu información personal: queremos ayudarte a llevar a cabo todos los pasos necesarios para proteger tu privacidad e información. Consulta la Política de privacidad de EDOtek y los avisos sobre privacidad de la Aplicación para conocer qué tipo de información recopilamos y las medidas que tomamos para proteger tu información personal.\n
\n
6. Queda prohibido alterar o modificar ninguna parte de la APP a de los contenidas de la misma, eludir, desactivar o manipular de cualquier otra forma (o tratar de eludir, desactivar o manipular) lasfunciones de seguridad u otras funciones del programa y utilizar la APP o sus contenidos para un fin  comercial o publicitario. Queda prohibido el uso de la APP con la finalidad de lesionar bienes, derechos o intereses de EDOtek o de terceros. Queda igualmente prohibido realizar cualquier otro uso que altere, dañe o inutilice las redes, servidores, equipos, productos y programas informáticos de EDOtek o de terceros.\n
\n
7. La APP y sus contenidos (textos, fotografías, gráficos, imágenes, tecnología, software, links, contenidos, diseño gráfico, código fuente, etc.), así como las marcas y demás signos distintivos son propiedad de EDOtek o de terceros, no adquiriendo el Usuario ningún derecho sobre ellos por el mero uso de la APP. El Usuario, deberá abstenerse de:\n
a) Reproducir, copiar, distribuir, poner a disposición de terceros, comunicar públicamente, transformar o modificar la APP o sus contenidos, salvo en los casos contemplados en la ley o expresamente autorizados por EDOtek o por el titular de dichos derechos.\n
b) Reproducir o copiar para uso privado la APP o sus contenidos, así como comunicarlos públicamente o ponerlos a disposición de terceros cuando ello conlleve su reproducción.\n
c) Extraer o reutilizar todo o parte sustancial de los contenidos integrantes de la APP.\n
\n
8. Con sujeción a las condiciones establecidas en el apartado anterior, EDOtek concede al Usuario una licencia de uso de la APP, no exclusiva, gratuita, para uso personal, circunscrita al territorio nacional y con carácter indefinido. Dicha licencia se concede también en los mismos términos con respecto a las actualizaciones y mejoras que se realizasen en la aplicación. Dichas licencias de uso podrán ser revocadas por EDOtek unilateralmente en cualquier momento, mediante la mera notificación al Usuario.\n
\n
9. Corresponde al Usuario, en todo caso, disponer de herramientas adecuadas para la detección y desinfección de programas maliciosos o cualquier otro elemento informático dañino. EDOtek no se responsabiliza de los daños producidos a equipos informáticos durante el uso de la APP. Igualmente, EDOtek no será responsable de los daños producidos a los Usuarios cuando dichos daños tengan su origen en fallos o desconexiones en las redes de telecomunicaciones que interrumpan el servicio.\n
\n
10. IMPORTANTE: Podemos, sin que esto suponga ninguna obligación contigo, modificar estas Condiciones de uso sin avisar en cualquier momento. Si continúas utilizando la aplicación una vez realizada cualquier modificación en estas Condiciones de uso, esa utilización continuada constituirá la aceptación por tu parte de tales modificaciones. Si no aceptas estas condiciones de uso ni aceptas quedar sujeto a ellas, no debes utilizar la aplicación ni descargar o utilizar cualquier software relacionado. El uso que hagas de la aplicación queda bajo tu única responsabilidad. No tenemos responsabilidad alguna por la eliminación o la incapacidad de almacenar o trasmitir cualquier contenido u otra información mantenida o trasmitida por la aplicación. No somos responsables de la precisión o la fiabilidad de cualquier información o consejo trasmitidos a través de la aplicación.\n
\n
Podemos, en cualquier momento, limitar o interrumpir tu uso a nuestra única discreción. Hasta el máximo que permite la ley, en ningún caso seremos responsables por cualquier pérdida o daño relacionados.\n
\n
11. El Usuario se compromete a hacer un uso correcto de la APP, de conformidad con la Ley, con los presentes Términos y Condiciones de Uso y con las demás reglamentos e instrucciones que, en su caso, pudieran ser de aplicación El Usuario responderá frente a EDOtek y frente a terceros de cualesquiera daños o perjuicios que pudieran causarse por incumplimiento de estas obligaciones. \n
\n
12. Estos Términos y Condiciones de Uso se rigen íntegramente por la legislación española. Para la resolución de cualquier conflicto relativo a su interpretación o aplicación, el Usuario se somete expresamente a la jurisdicción de los tribunales.</string>

    <string name="acepto">Acepto</string>
    <string name="cancelo">Cancelar</string>
    <string name="title_activity__administrador">Activity_Administrador</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="usuario">usuario</string>
    <string name="estilista">estilista</string>
    <string name="admin">admin</string>
    <string name="title_activity__administardor">Activity_Administardor</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="nomina">Descargar nomina</string>
    <string name="guardar">Guardar</string>
    <string name="name">Nombre</string>
    <string name="cobroAdmin">Cuanto cobra el Administrador</string>
    <string name="nameAdmin">Nombre del Administrador</string>
    <string name="euro">€</string>
    <string name="deleteAdmin">Eliminar Administrador</string>
    <string name="save">Guardar</string>
    <string name="cobroEstilista">Cuanto cobra el estilista</string>
    <string name="nameEstilista">Nombre del estilista</string>
    <string name="deleteEstilista">Eliminar estilista</string>
    <string name="cobroUser">Cuanto paga el usuario</string>
    <string name="nameUser">Nombre del usuario</string>
    <string name="deleteUser">Eliminar usuario</string>
    <string name="delete">Borrar</string>
    <string name="conjuntoExiste">El conjunto ya existe!</string>
    <string name="conjuntoGuardado">Conjunto guardado</string>

    <string name="botonborrarconjunto">-</string>
    <string name="recursos_humanos">Recursos humanos</string>
    <string name="gestion_de_contratos">Gestion de Contratos</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="contabilidad_y_finanzas">Contabilidad y finanzas</string>
    <string name="clientes">Clientes</string>
    <string name="facturas">Facturas</string>
    <string name="informes">Informes</string>
    <string name="control_de_asistencia">Control de asistencia</string>
    <string name="bd_de_clientes">BD de clientes</string>
    <string name="productos_a_clientes">Productos a clientes</string>
    <string name="gestion_de_reclamaciones">Gestion de reclamaciones</string>
    <string name="gestion_de_asientos_contables">Gestion de asientos contables</string>
    <string name="gestion_de_cierres_contables">Gestion de Cierres contables</string>
    <string name="diarios_contables">Diarios contables</string>
    <string name="generacion_de_informes">Generacion de informes</string>
    <string name="descarga_tu_factura">Descarga tu factura</string>


</resources>
