<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ColordeFondo"
    tools:context=".Activity_Terminos">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- Estos son los textos que son llamados desde la pagina strings.xml con el comando @string/app_name-->
            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTexto"
                android:textColorHint="@color/colorTexto"
                android:text="@string/app_titulo"

                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textView2"
                android:textColor="@color/colorTexto"
                android:textColorHint="@color/colorTexto"
                android:layout_width="match_parent"
                android:layout_height="1912dp"
                android:text="@string/app_texto"

                android:textStyle="bold|italic" />
            <!-- Estos son los botones de Aceptar y Cancelar los Terminos de Uso-->
            <Button
                android:id="@+id/Button2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/acepto" />

            <Button
                android:id="@+id/Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancelo" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>