<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ropaapp.Fragment_Administrador">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/texto_cobro3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="96dp"
            android:text="@string/loginContraseña"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/texto_cobro2" />

        <EditText
            android:id="@+id/ETcontraseñaAdmin"
            android:layout_width="207dp"
            android:layout_height="44dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="76dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/name"
            app:layout_constraintStart_toEndOf="@+id/texto_cobro3"
            app:layout_constraintTop_toBottomOf="@+id/ETnombreAdmin" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="362dp"
            android:layout_height="63dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:background="@color/Spinner"
            android:popupBackground="@color/Spinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/Texto_cobro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="53dp"
            android:text="@string/cobroAdmin"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner" />

        <TextView
            android:id="@+id/texto_cobro2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="96dp"
            android:text="@string/nameAdmin"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Texto_cobro" />

        <EditText
            android:id="@+id/ETnombreAdmin"
            android:layout_width="145dp"
            android:layout_height="45dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="80dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/name"
            app:layout_constraintStart_toEndOf="@+id/texto_cobro2"
            app:layout_constraintTop_toBottomOf="@+id/ETsalarioAdmin" />

        <EditText
            android:id="@+id/ETsalarioAdmin"
            android:layout_width="70dp"
            android:layout_height="43dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="44dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintStart_toEndOf="@+id/Texto_cobro"
            app:layout_constraintTop_toBottomOf="@+id/spinner" />

        <TextView
            android:id="@+id/texto_cobro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_marginTop="60dp"
            android:text="@string/euro"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/ETsalarioAdmin"
            app:layout_constraintTop_toBottomOf="@+id/spinner" />

        <Button
            android:id="@+id/botonGuardarAdmin"
            android:layout_width="92dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="108dp"
            android:text="@string/save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/texto_cobro3" />

        <Button
            android:id="@+id/botonEliminaradmin"
            android:layout_width="173dp"
            android:layout_height="50dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="102dp"
            android:text="@string/deleteAdmin"
            app:layout_constraintStart_toEndOf="@+id/botonGuardarAdmin"
            app:layout_constraintTop_toBottomOf="@+id/ETcontraseñaAdmin" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>