<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/consLayo"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ColordeFondo"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/botonRegistro"
        style="@style/botonesalargados"
        android:layout_marginStart="76dp"
        android:layout_marginBottom="40dp"
        android:background="@color/Color1"
        android:text="@string/BTNRegistro"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/botonEntrar"
        style="@style/botonesalargados"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="40dp"
        android:background="@color/Color1"
        android:text="@string/BTNentrarLogin"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/loginContrasenya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="48dp"
        android:ems="10"
        android:hint="@string/loginContraseña"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textColorHighlight="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textColorLink="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/botonRegistro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/loginNombreUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/hintDeLogin"
        android:inputType="textPersonName"
        android:scrollbarThumbHorizontal="@color/Color4"
        android:scrollbarThumbVertical="@color/Color4"
        android:scrollbarTrackHorizontal="@color/Color4"
        android:scrollbarTrackVertical="@color/Color4"
        android:textColor="@android:color/white"
        android:textColorHighlight="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textColorLink="@android:color/white"
        android:textCursorDrawable="@color/Color4"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/loginContrasenya"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>