<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_Conjuntos">

    <TextView
        android:id="@+id/nombreConjunto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NombreConjunto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/conjuntoPrenda1"
        />

    <ImageView
        android:id="@+id/conjuntoPrenda1"
        android:layout_width="190dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toTopOf="@+id/conjuntoPrenda2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreConjunto"
        app:srcCompat="@android:color/holo_green_light"/>

    <ImageView
        android:id="@+id/conjuntoPrenda2"
        android:layout_width="193dp"
        android:layout_height="170dp"

        android:contentDescription="@string/Mensajededescripcion"
        app:layout_constraintBottom_toTopOf="@+id/conjuntoPrenda3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conjuntoPrenda1"
        app:srcCompat="@android:color/holo_red_light"/>

    <ImageView
        android:id="@+id/conjuntoPrenda3"
        android:layout_width="190dp"
        android:layout_height="201dp"

        android:contentDescription="@string/Mensajededescripcion"
        app:layout_constraintBottom_toTopOf="@+id/conjuntoPrenda4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conjuntoPrenda2"
        app:srcCompat="@android:color/holo_blue_dark"/>

    <ImageView
        android:id="@+id/conjuntoPrenda4"
        android:layout_width="197dp"
        android:layout_height="90dp"

        android:contentDescription="@string/Mensajededescripcion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/conjuntoPrenda3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@android:color/white"
        />

    <Button
        android:id="@+id/siguienteConjunto"
        android:layout_width="95dp"
        android:layout_height="55dp"

        android:text="@string/FlechaDerecha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/conjuntoPrenda3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/anteriorConjunto"
        android:layout_width="95dp"
        android:layout_height="55dp"

        android:text="@string/FlechaIzquierda"
        app:layout_constraintEnd_toStartOf="@+id/conjuntoPrenda3"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/botoFavorito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="244dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="38dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/conjuntoPrenda4"
        app:layout_constraintTop_toBottomOf="@+id/siguienteConjunto" />
</androidx.constraintlayout.widget.ConstraintLayout>