<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ColordeFondo"
    tools:context=".Activity_Seleccion_Prenda">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="238dp"
        android:layout_height="230dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="68dp"
        android:contentDescription="@string/Mensajededescripcion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:color/holo_purple" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="68dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="136dp"
        android:contentDescription="@string/Mensajededescripcion"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@android:color/holo_blue_bright" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="68dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="136dp"
        android:contentDescription="@string/Mensajededescripcion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@android:color/holo_blue_bright" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="68dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="136dp"
        android:contentDescription="@string/Mensajededescripcion"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@android:color/holo_blue_bright" />

    <Button
        android:id="@+id/BTNsiguiente"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_marginTop="508dp"
        android:layout_marginEnd="32dp"
        android:background="@color/Color1"
        android:text="@string/FlechaDerecha"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/BTNAnterior"
        android:layout_width="51dp"
        android:layout_height="56dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="500dp"
        android:backgroundTint="@color/Color1"
        android:text="@string/FlechaIzquierda"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>